<resources>
    <string name="app_name">Oweme</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="signIN">Sign in</string>
    <string name="newMember">New to appName? Create a new account..</string>
    <string name="createAccount">Create</string>
    <string name="openingText">Welcome to appName! \nlets make your new account</string>
    <string name="details">Enter your details:</string>
    <string name="confirm">Confirm password</string>
    <string name="photo">upload a photo:</string>
    <string name="register">Register</string>
    <string name="nickName">NickName</string>
    <string name="email">Email</string>
    <string name="signUpPassword">Password (at least 6 characters)</string>
    <string name="intro">What do you want to do with your account?</string>
    <string name="createNewEvent">Create a new event</string>
    <string name="history">Open my Events-History</string>
    <string name="account">Show my account status</string>
    <string name="newEvent">New Event</string>
    <string name="eventNameTV">Enter event name:</string>
    <string name="enterHere">Enter Here</string>
    <string name="addMembers">Who do you want to add to your event?</string>
    <string name="add">Add Members</string>
    <string name="takingTime">It may take a while...Updating your user to the Cloud </string>
    <string name="newExpense">New Expense</string>
    <string name="choose">Who did you pay for?</string>
    <string name="takePhoto">Take a photo     ---></string>
</resources>
