<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="25dp"
            android:textStyle="italic"
            android:text="@string/openingText" />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/details"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nickName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:ems="10"
            android:hint="@string/signUpPassword"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/common_google_signin_btn_icon_disabled" />

            <Button
                android:id="@+id/btnGalery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="95dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Galery..."
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/createUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="120dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:enabled="false"
            android:text="@string/createAccount" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/someText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="invisible"
            android:text="@string/takingTime" />
    </LinearLayout>

</RelativeLayout>