<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginHorizontal="20dp"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="120dp"
            android:text="@string/signIN"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="15dp"
            android:text="@string/newMember"
            android:textSize="20dp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:onClick="onClick"/>

    </LinearLayout>

</RelativeLayout>