<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:textStyle="italic|bold"
            android:textAlignment="center"
            android:text="@string/newEvent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="italic"
                android:layout_marginEnd="10dp"
                android:text="@string/eventNameTV" />

            <EditText
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/enterHere"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textStyle="italic"
            android:text="@string/addMembers" />

        <Button
            android:id="@+id/addBTN"
            android:layout_marginTop="25dp"
            android:layout_gravity="end"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="onClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollbars="horizontal"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:id="@+id/createNewEvent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="125dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:onClick="onClick"
            android:text="@string/createAccount" />

        <Button
            android:id="@+id/cancel"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Cancel" />

    </LinearLayout>
</RelativeLayout>